syntax = "proto3";

option go_package = "grpcapi";

message PreviewParams {
    string url = 1;
    uint32 width = 2;
    uint32 height = 3;
}

message Preview {
    PreviewParams params = 1;
    bytes  image = 2;
}